fix 重复定义bean